# stock-trader

./: .gitignore  Cargo.toml  LICENSE  README.md  ecosystem.config.cjs  ecosystem.config.js
broker-ibkr/: Cargo.toml
broker-ibkr/src/: lib.rs
broker-longbridge/: Cargo.toml
broker-longbridge/src/: lib.rs
config/: example.toml
scripts/: run-watch.sh
tradebot-cli/: Cargo.toml
tradebot-cli/src/: main.rs  notify.rs  watch.rs
trading-core/: Cargo.toml
trading-core/src/: allocation.rs  broker.rs  config.rs  engine.rs  errors.rs  lib.rs  models.rs
