[workspace]
members = [
    "trading-core",
    "broker-longbridge",
    "broker-ibkr",
    "tradebot-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Alan Guo"]

[workspace.dependencies]
aws-config = { version = "1.6.1", default-features = false, features = ["rt-tokio", "rustls"] }
aws-sdk-sesv2 = { version = "1.67.0", default-features = false, features = ["rt-tokio", "rustls"] }
chrono = { version = "0.4.40", default-features = false, features = ["clock", "std"] }
chrono-tz = "0.10.4"
clap = { version = "4.5.32", features = ["derive"] }
reqwest = { version = "0.12.15", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1", features = ["rt-multi-thread", "time"] }
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
uuid = { version = "1.16.0", features = ["v4"] }
