[package]
name = "tradebot-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
aws-config.workspace = true
aws-sdk-sesv2.workspace = true
broker-ibkr = { path = "../broker-ibkr" }
broker-longbridge = { path = "../broker-longbridge" }
chrono.workspace = true
chrono-tz.workspace = true
clap.workspace = true
notify.workspace = true
rustls.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
trading-core = { path = "../trading-core" }
